# HackaTUM-Check24

./: Cargo.toml  README.md  docker-compose.yml
Backend/: .env  Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml
Backend/db_data/: 1_postcode.sql  2_postcode_opt.sql  2_profiles_split_merge.sql  3_dist_precalc_filter.sql  dist_precalc_filter.sql  postcode_opt.sql  prepared_statements.sql  rank_precalc.sql
Backend/src/: main.rs  server.rs
db_data/: quality_factor_score.sql
src/: main.rs  server.rs
