[package]
name = "HackaTUM-Check24-Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
serde = "1.0.192"

serde_derive = "1.0.192"
sqlx = "0.7.2"
sqlx-core = "0.7.2"
sqlx-postgres = "0.7.2"
tokio = "1.34.0"
